--- a/bollerplate/index.html
+++ b/bollerplate/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 	<meta description="boilerplate code">
 	<meta keywords="boilerplate, test">
 	<title>Boilerplate</title>
